# scoring_ifrs9

./: .dockerignore  .gitignore  Dockerfile  EDA.ipynb  README.md  Read.me  dashboard.py  pyproject.toml  var_names.xlsx
data/processed/: scoring_model.pkl
notebooks/: preprocessing.ipynb
src/: config.py  main.py  models.py  pipeline.py  preprocessing.py
