[project]
name = "scoring-ifrs9"
version = "0.1.0"
description = "Calcul de l'ECL (IFRS9) basé sur les modèles PD, LGD, EAD."
authors = [
    {name = "Ril~",email = "rilwanouan5@gmail.com"}
]
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
