[tool.poetry]
name = "scoring-ifrs9"
version = "0.1.0"
description = "ECL Calculation (IFRS9) based PD, LGD and EAD models."
authors = ["Ril~ <rilwanouan5@gmail.com>"]
readme = "README.md"
package-mode = false 


[tool.poetry.dependencies]
python = ">=3.13"
statsmodels = ">=0.14.5,<0.15.0"
joblib = ">=1.5.2,<2.0.0"
scikit-learn = ">=1.7.2,<2.0.0"
streamlit = "^1.51.0"

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.1.1,<2.0.0"
matplotlib = ">=3.10.7,<4.0.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
